--- a/1.html
+++ b/1.html
@@ -36,46 +36,62 @@
   вывести этот элемент в консоль.
    */
 
+  console.log(document.getElementById('super_link'));
 
   /*
   2. Внутри всех элементов на странице, которые имеют класс "card-link",
   поменяйте текст внутри элемента на "ссылка".
    */
 
+  const cardEl = document.querySelector('.card-link');
+  console.log(cardEl.innerText);
+  cardEl.innerText = 'ссылка';
+  console.log(cardEl.innerText);
 
   /*
   3. Найти все элементы на странице с классом "card-link", которые лежат в
   элементе с классом "card-body" и вывести полученную коллекцию в консоль.
    */
 
+  console.log(document.querySelectorAll('.card-body .card-link'));
 
   /*
   4. Найти первый попавшийся элемент на странице у которого есть атрибут
   data-number со значением 50 и вывести его в консоль.
    */
-
+  
+  console.log(document.querySelector('[data-number="50"]'));
 
   /*
   5. Выведите содержимое тега title в консоль.
    */
 
+  console.log(document.title);
 
   /*
   6. Получите элемент с классом "card-title" и выведите его родительский узел
   в консоль.
    */
 
-
+  console.log(document.querySelector('.card-title').parentNode);
+  
   /*
   7. Создайте тег `p`, запишите внутри него текст "Привет" и добавьте созданный
   тег в начало элемента, который имеет класс "card".
    */
 
+const divCard = document.querySelector('.card');
+const pEl = document.createElement('p');
+divCard.appendChild(pEl);
+pEl.textContent = 'Привет';
+console.log(divCard);
 
   /*
   8. Удалите тег h6 на странице.
    */
 
+const h6El = document.querySelector('h6');
+h6El.remove();
 
 </script>
 </body>
