--- a/3.html
+++ b/3.html
@@ -57,12 +57,16 @@
   теги будут созданы браузером.
   */
 
+document.addEventListener('DOMContentLoader', () =>
+  console.log('все теги прогрузились'));  //почему то не выводит
 
   /*
   2. Необходимо вывести сообщение в консоль "страница загрузилась", когда все
   ресурсы страницы будут загружены.
   */
 
+window.addEventListener('load', () => 
+  console.log('страница загрузилась'));
 
   /*
   3. При клике на какой-либо тег на странице в консоль должно выводиться
@@ -73,13 +77,21 @@
   которому был совершен клик.
   Необходимо использовать делегирование.
   */
-
+document.addEventListener('click', event => {
+  const containEl = event.target.classList.contains('super_element')
+  ? 'присутствует' : 'отсутствует';
+  console.log(`Класс "super_element" ${containEl} в элементе "${event.target.tagName.toLowerCase()}".`);
+});
 
   /*
   4. Сделайте, чтобы при наведении на textarea в консоли появлялось сообщение:
   "Вы навели на textarea."
    */
 
+const areaEl = document.querySelector('textarea');
+  areaEl.addEventListener('mouseover', event => {
+  console.log('Вы навели на textarea.');
+}); 
 
   /*
   5. Необходимо повесить событие клика на тег ul. В обработчике события в
@@ -89,6 +101,12 @@
   Необходимо использовать делегирование.
    */
 
+document.querySelector('ul').addEventListener('click', event => {
+  if (event.target.tagName !== "BUTTON") {
+    return;
+  }
+console.log(event.target.textContent);
+});
 
   /*
   6. Вопрос: Почему в console.log пишется сначала текст из 5 задания и только
@@ -96,10 +114,15 @@
   Ответ необходимо написать здесь же, под этим комментарием, своими словами.
   */
 
+  //Может не много не так понимаю, но возможно из-за скорости загрузки страницы
 
   /*
   7. С помощью JS необходимо изменить цвет заднего фона каждого второго тега li.
    */
+
+    document
+      .querySelectorAll('li:nth-child(2n)')
+      .forEach(liEl => liEl.style.backgroundColor = 'red');
 
 </script>
 </body>
